@@ -7,6 +7,8 @@ version ? (??/??/????):
   - bugfix: ipaddr_pub in NetworkShift() function (alec)
   - lms/pinger: added online status activation of host where runs daemon (alec)
   - Customer Search Results paging (alec)
+  - fixed smtp_auth_type default behaviour - use best method (alec)
+  - function SendMail() returns warnings from PEAR (alec)
 
 version 1.6.0rc1 Thor (13/05/2005):
 
